css/style.css
body {
    font-family:'Raleway', sans-serif;
    color:#000000;
    font-size: 0.94em;
}

*, *:before, *:after {
    box-sizing: border-box; /* Opera/IE 8+ */
    -moz-box-sizing: border-box; /* Firefox, autres Gecko */
    -webkit-box-sizing: border-box; /* Safari/Chrome, autres WebKit */
    margin: 0;
    padding: 0;
  }

/* version web */

a {
    text-decoration: none; 
    color:#000000; 
}

img{
    object-fit: cover;
    object-position: center;
}

/* header */

header {
    display:flex;
    justify-content: space-between;
    align-items: center; 
    height: 118px;
    margin: 0 50px;
}

#logo {
    width: 150px;
    margin-left:16px;
}

/* main */
main {
    margin: 0 50px;
}

/* nav */


.menu-item {
    padding: 0 45px;
}

.menu-item:hover {
    border-top: 4px solid #0065fc;
    padding: 45px;
    color:#0065fc;



}
/* section recherche */



.search h1 {
    font-size: 1.2em;    
}

.form {
    display: flex;
    margin-top: 20px;
}

.fa-map-marker-alt {
    width: 45px;
    height: 45px;
    color: #000000;
    background-color: #F2F2F2;
    border: 3px #F2F2F2 solid;
    padding: 13px;
    border-radius: 15px 0px 0px 15px;
    text-align: center;
    font-size: 0.94em;
}

.destination {
    border: 2px #F2F2F2 solid;
    font-size: 1em;
    font-weight:bold;
    width: 240px;
    text-indent: 10px; 
}

/* text-indent => alinea */

::-webkit-input-placeholder {  color:#afabab; opacity: 1; }
::-moz-placeholder {  color:#afabab; opacity: 1;}
input:-moz-placeholder {  color:#afabab; opacity: 1;} 
/*pour que la couleur grise s'affiche dans Chrome et Firefox*/

.search-rechercher {
    border-radius: 0 13px 13px 0;
    background:#0065fc;
    color: #ffff;
    border-style: none;
    font-weight: bold;
    width: 130px;
    font-size: 1em;
    opacity: 0.8;
    transition: 0.6s;
   
}
.search-rechercher:hover{
    opacity: 1;
    transition: 0.6s;
}

.search-icon {
    display:none;
}

/* section filter */

.filter {
    display: flex;
    flex-wrap:wrap;
    align-items: center;
    margin: 30px 0px; 
    gap: 25px;
}

/* gap => espace entre les lignes et les colonnes */

.filter h2 {
    font-weight: bold;
    font-size: 1em;
}

.filter ul {
    display: flex;
    flex-wrap: wrap; 
    gap: 18px;
}

.filter li {
    display: flex;
    align-items: center;
    border: 2px solid #d9d9d9;
    border-radius: 100px;
    border-left: #DEEBFF;  
    transition: 1.60s;
}

.filter a {
    font-size: 1em;
    font-weight: bold;
    color:#000000; 
    padding: 0px 12px;
    
    
}

.filter li:hover {
    background-color: #DEEBFF;
    transition: 0.6s;
   
   
    
}

.blue-icon {
    color: #0065fc;
    background-color: #DEEBFF;
    border-radius: 100%;
    width: 45px;
    height: 45px;
    text-align: center;
    line-height: 3 !important;
    margin: -2px;
}

/* Info */
.info {
    display: flex;
    align-items:center;   
}

.fa-info {
    width: 22px;
    height: 22px;
    color: #0065fc;
    border-radius: 100%;
    border: 1px solid #d9d9d9;
    padding: 5px 8px;
    font-size: 0.72em;
}

.info p {
    margin-left: 15px;
}
/* section hébergement */


#page-accommodation {
    margin-top:30px;
    display: flex;
    gap: 45px;
    display: flex;
}

.accommodation_Marseille {
    background-color: #F2F2F2;
    display:flex;
    flex-direction: column;
    flex-wrap:wrap;
    border-radius: 20px;
    width: 67%;
    padding: 2rem;
}

.card_accommodation_Marseille {
    display:flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap: 30px;
    padding: 30px 0px 50px 0px;

    
    
}

.card_hotel {
    min-width: 200px;
    width: 30%;
    height: 190px;
    background-color:  #ffff;
    border: 4px solid #ffff;
    border-radius: 20px;
    box-shadow: 1px 1px 10px #dfdfdf;
    line-height: 1.5;
}


.card_hotel img {
    width: 100%;
    height: 110px;
    border-radius: 15px 15px 0 0;
}

.card_body_hotel {
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    padding-left: 10px;
}

h3 {
    font-size: 0.94em;
    font-weight: bold;
}


.card_body_hotel p, .card_populars_hotels p {
    font-size: 0.94em;
}

.link_show_more {
    text-decoration: none;
    color:#000000;
    font-size: 1em;
    font-weight: bold;
}

.full {
    color:#0065fc;
    font-size: 0.72em;
}

.empty {
    color: #d9d9d9;
    font-size: 0.72em;
}

.stars {
    display: flex;
    padding-top: 5px;
 }

 /*les plus populaires*/

.page_populars {
    min-width: 360px;
    background-color: #F2F2F2;
    display:flex;
    flex-direction: column;
    border-radius: 20px;
    width: 33%;
    padding: 2rem;
}

.page_populars h2 {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.card_populars {
    display:flex;
    flex-direction:column;
    padding-top: 30px;
    row-gap:12px;
}

.card_populars_hotels {
    min-width: 280px;
    height: 140px;
    background-color:  #ffff;
    border: 5px solid #ffff;
    border-radius: 20px;
    margin-bottom:25px; 
    box-shadow: 1px 1px 10px #dfdfdf;
    
}

.card_populars_hotels a {
    display: flex;
    height: 100%;
}

.card_populars_hotels img {
    width: 40%;
    border-radius: 15px 0 0 15px;
}

.card_body_populars_hotels {
    display:flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 10px;
   
}

.stars_P {
    display: flex;
    padding-top: 35px;
 }

 /* Activités à Marseille */

 #page-activities {
    padding-top: 50px;
}

.card_activities {
   display:flex;
   flex-wrap: wrap;
   justify-content: space-between;  
   margin-top:30px;
}

.card_activities h3 {
   padding: 6%;  
}

.card_activities img {
   width: 100%;
   border-radius: 25px 25px 0px 0px;
   box-shadow: 1px 1px 10px #dfdfdf;
}

.card_one { 
   width: 23%;
   background-color:  #ffff;
   box-shadow: 1px 1px 10px #dfdfdf;
   border-radius: 25px 25px 25px 25px; 
}

.card_group {
   width: 23%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;    
}

.card_group_1,.card_group_2,.card_group_3,.card_group_4 {
   background-color:  #ffff;
   box-shadow: 1px 1px 10px #dfdfdf;
   border-radius: 25px 25px 25px 25px; 
}

.card_one img {
   height: 380px;
}

.card_group_1 img{  
   height: 180px;
}

.card_group_2 img{
   height: 100px;
}

.card_group_3 img{
   height: 130px;
}

.card_group_4 img{
   height: 140px;
}
/* footer*/
footer {
    margin-top:40px;
    display: flex;
    justify-content: space-between;
    background: #F2F2F2;
    padding:3rem;
    padding-right: 25%;
    
}

footer h2 {
    font-size:1em;
    margin-bottom: 20px;   
}

footer li {
    font-size: 0.94em; 
    list-style: none;
    padding-top: 8px;
    transition: 0.6s;
   
}
footer li:hover{
    text-decoration: underline;
    transition: 0.6s;

}

/* MEDIA QUERIES */


@media screen and (max-width: 992px){

    .page_populars {
        width: 50%;
    }



    .accommodation_Marseille {
        width: 50%;
       
    }

    .card_hotel {
        width: 100%;
        height: 250px;

    }
}

@media screen and (max-width: 768px) {
    header {
        display:flex;
        align-items: center;
        flex-direction: column;
        height: 100%;

    }
    
    #logo {
       text-align: center;
    }

    nav {
        display: flex;
        width:100%; 
    }
    
    .menu-item {
        text-align: center;
        border-bottom: 4px solid #F2F2F2;
        width: 50%;
        padding: 0;
    }
    
    .menu-item:hover {
        border-top: none;
        border-bottom: 4px solid #0065fc;
        padding: 0;  
    }

    .search-rechercher {
        display:none;
    }

    .search-icon {
        display:block;
        border-radius: 13px 13px 13px 13px;
        background:#0065fc;
        color: #ffff;
        border-style: none;
        font-weight: bold;
        min-width: 50px;
        font-size: 1em;
        margin-left: -20px;
    }

    #page-accommodation {
        flex-direction: column-reverse;
        gap: 25px;  
    }

    main {
        margin: 0;
    }

    .search,.filter,.info{
        margin: 20px;
    }


    .page_populars {
        background-color: #F2F2F2;
        border-radius: 0px;
        width: 100%;
        padding: 1rem;
    }



    .accommodation_Marseille {
        background-color: #ffff;
        border-radius: 0px;
        width: 100%;
        padding: 1rem;     
    }

    .card_hotel {
        width: 100%;
        height: 250px;

    }

    .card_hotel img{
        height: 150px;
    }

    .card_activities {
        display:flex;
        flex-direction: column; 
        gap:30px;
    }

    .card_one, .card_group {
        width: 100%;
    }

    .card_group {
        gap: 30px;
    }
    
    .card_one img, .card_group_1 img, .card_group_2 img {
        height: 150px;
    }

    .card_populars {
        row-gap:0;
    }

    .card_accommodation_Marseille {
        gap:30px;
    }

    #page-activities{
        margin: 1rem;
    }

    footer {

        display: flex;
        flex-direction: column;
        gap: 30px;
        padding: 1rem;
  
      }
  
    footer h2 {
          margin-bottom: 5px;   
      }
}

